--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     />
     <link rel="icon" type="image" href="/sel-logo-400.png" />
     <title>
-      Online Courses - Learn Commerce and Code | skyinnk expressive learning
+      Online Courses - Learn Commerce Accounting Management Data Analytics and
+      Web App Development | skyinnk expressive learning
     </title>
   </head>
   <body>
